--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <!-- Copyright (C) 2012 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,16 +13,13 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.google.android.gms"
-          android:versionCode="940"
-          android:versionName="9.4.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.google.android.gms"
+    android:versionCode="960"
+    android:versionName="9.6.0">
     <uses-sdk android:minSdkVersion="9"/>
 
     <application>
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
