--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,6 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 # Project target.
 target=android-28
 android.library=true
-android.library.reference.1=../android-support-v4
+android.library.reference.1=../androidx-collection
+android.library.reference.2=../androidx-core
+android.library.reference.3=../androidx-fragment
